--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Rock Paper Scissors</title>
   </head>
   <body>
+    <button>Rock</button>
+    <button>Paper</button>
+    <button>Scissors</button>
     <script src="script.js"></script>
   </body>
 </html>
