--- a/index.html
+++ b/index.html
@@ -4,11 +4,33 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rock Paper Scissors</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <button>Rock</button>
-    <button>Paper</button>
-    <button>Scissors</button>
+    <div class="container">
+      <h1>Rock Paper Scissors</h1>
+      <h2>Make a choice</h2>
+      <div class="display-choice">
+        <div class="player choice">
+          <div class="player-display">
+            <img src="./images/scissors.png" />
+          </div>
+          <div>Player:0</div>
+        </div>
+        <div class="Computer choice">
+          <div class="computer-display">
+            <img src="./images/rock.png" />
+          </div>
+          <div>Computer:0</div>
+        </div>
+      </div>
+      <div class="selection-button">
+        <button>Rock</button>
+        <button>Paper</button>
+        <button>Scissors</button>
+      </div>
+    </div>
+
     <script src="script.js"></script>
   </body>
 </html>
